Bug 1586061: Prevent additional hidden windows from being created if one already exists on macOS. r=mstange,a=ryanvm

Differential Revision: https://phabricator.services.mozilla.com/D134055